--- a/static/index.html
+++ b/static/index.html
@@ -1,17 +1,28 @@
 <html lang="en">
     <head>
-        <title>picamera2 MJPEG streaming demo</title>
+        <title>Pi Monitoring</title>
+        <link rel="stylesheet" href="styles.css">
+        <script src="script.js"></script>
     </head>
     <body>
-        <h1>Picamera2 MJPEG Streaming Demo</h1>
-        <img src="stream.mjpg" width="1280" height="720"/>
-        <div>
-            <p id="temperature"></p>
-            <p id="humidity"></p>
-            <p id="atm_pressure"></p>
+        <h1>Pi Monitoring</h1>
+        <div id="main-section">
+            <img src="stream.mjpg" id="stream"/>
+            <div id="info-section">
+                <div>
+                    <p>Information</p>
+                    <p id="temperature"></p>
+                    <p id="humidity"></p>
+                    <p id="soil_humidity"></p>
+                </div>
+                <div>
+                    <p>Settings</p>
+                    <label for="light_check">Light</label>
+                    <input type="checkbox" name="light_check" id="light_check">
+                </div>
+            </div>
+            <button id="postButton">Apply Settings</button>
+<!--            <button id="getButton">GET</button>-->
         </div>
-        <button id="postButton">POST</button>
-        <button id="getButton">GET</button>
-        <script src="script.js"></script>
     </body>
 </html>
