--- a/static/index.html
+++ b/static/index.html
@@ -19,6 +19,8 @@
                     <p>Settings</p>
                     <label for="light_check">Light</label>
                     <input type="checkbox" name="light_check" id="light_check">
+                    <label for="water_check">Water</label>
+                    <input type="checkbox" name="water_check" id="water_check">
                 </div>
             </div>
             <button id="postButton">Apply Settings</button>
