--- a/static/index.html
+++ b/static/index.html
@@ -15,13 +15,13 @@
                     <p id="humidity"></p>
                     <p id="soil_humidity"></p>
                 </div>
-                <div>
-                    <p>Settings</p>
-                    <label for="light_check">Light</label>
-                    <input type="checkbox" name="light_check" id="light_check">
-<!--                    <label for="water_check">Water</label>-->
-<!--                    <input type="checkbox" name="water_check" id="water_check">-->
-                </div>
+<!--                <div>-->
+<!--                    <p>Settings</p>-->
+<!--                    <label for="light_check">Light</label>-->
+<!--                    <input type="checkbox" name="light_check" id="light_check">-->
+<!--&lt;!&ndash;                    <label for="water_check">Water</label>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <input type="checkbox" name="water_check" id="water_check">&ndash;&gt;-->
+<!--                </div>-->
             </div>
             <button id="postButton">Apply Settings</button>
 <!--            <button id="getButton">GET</button>-->
