more changes fixed

--- a/static/index.html
+++ b/static/index.html
@@ -23,7 +23,7 @@
 <!--&lt;!&ndash;                    <input type="checkbox" name="water_check" id="water_check">&ndash;&gt;-->
 <!--                </div>-->
             </div>
-            <button id="postButton">Apply Settings</button>
+<!--            <button id="postButton">Apply Settings</button>-->
 <!--            <button id="getButton">GET</button>-->
         </div>
         <script src="script.js"></script>
